images, fixes and advanced tasks

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,70 +1,99 @@
 .places h1 {
-    position: relative;
-    top: 0;
-    left: 0;
-    font-size: 30px;
+	position: relative;
+	top: 0;
+	left: 0;
+	font-size: 30px;
+	width: 100%;
+}
+
+.articles {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
 }
 
 .places article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: #FF5A5F 1px solid;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: #ff5a5f 1px solid;
+	border-radius: 4px;
+	position: relative;
 }
 
-.places article h2 {
-    font-size: 30px;
+.places article > h2 {
+	font-size: 30px;
+	text-align: center;
+	margin: 20px;
 }
 
 .price_by_night {
-    min-width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    color: #FF5A5F;
-    border: #FF5A5F 4px solid;
-    border-radius: 100%;
+	min-width: 60px;
+	height: 60px;
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	color: #ff5a5f;
+	border: #ff5a5f 4px solid;
+	border-radius: 100%;
+	font-size: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .information {
-    height: 80px;
-    border-top: #DDDDDD 1px;
-    border-bottom: #DDDDDD 1px;
-    display: flex;
-    flex-direction: column;
+	height: 80px;
+	border-top: #dddddd 1px solid;
+	border-bottom: #dddddd 1px solid;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .max_guest {
-    width: 100px;
+	width: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .guest_icon {
-    background: url('../images/guest_icon.png');
-    height: inherit;
-    width: inherit;
+	background: url("../images/guest_icon.png");
+	background-repeat: no-repeat;
+	height: 50px;
+	width: 50px;
 }
 
 .number_rooms {
-    width: 100px;
+	width: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .room_icon {
-    background: url('../images/room_icon.png');
-    height: inherit;
-    width: inherit;
+	background: url("../images/room_icon.png");
+	background-repeat: no-repeat;
+	height: 50px;
+	width: 50px;
 }
 
 .number_bathrooms {
-    width: 100px;
+	width: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .bath_icon {
-    background: url('../images/bath_icon.png');
-    height: inherit;
-    width: inherit;
+	background: url("../images/bath_icon.png");
+	background-repeat: no-repeat;
+	height: 50px;
+	width: 50px;
+}
+
+.user {
+	margin: 10px 0;
 }
