--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,12 +1,12 @@
 body {
-    margin: 0;
-    padding: 0;
-    color: #484848;
-    font-family: 'Circular,"Helvetica Neue",Helvetica,Arial,sans-serif';
-    font-size: 14px;
+	margin: 0;
+	padding: 0;
+	color: #484848;
+	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px;
 }
 
 .container {
-    max-width: 1000px;
-    margin: 30px auto;
+	max-width: 1000px;
+	margin: 30px auto 90px;
 }
