--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,10 +2,11 @@
     background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px #DDDDDD;
+    border: 1px #DDDDDD solid;
     border-radius: 4px;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .filters button {
@@ -16,7 +17,7 @@
     width: 20%;
     border-style: none;
     border-radius: 4px;
-    position: relative;
+    position: absolute;
     right: 30px;
 }
 
