--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,40 +1,51 @@
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px #DDDDDD solid;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	border: 1px #dddddd solid;
+	border-radius: 4px;
+	display: flex;
+	align-items: center;
+	position: relative;
 }
 
-.locations, .amenities {
-    height: 100%;
-    width: 25%;
-    border-right: #DDDDDD 1px solid;
+.filters .locations,
+.filters .amenities {
+	height: 100%;
+	width: 25%;
+	border-right: #dddddd 1px solid;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-.locations, .amenities h3 {
-    font-weight: 600;
+.locations h3,
+.amenities h3 {
+	font-weight: 600;
+	margin: 0;
+	padding-left: 20%;
 }
 
-.locations, .amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
+.locations h4,
+.amenities h4 {
+	font-weight: 400;
+	font-size: 14px;
+	margin: 0;
+	padding-left: 20%;
 }
 
 .filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-style: none;
-    border-radius: 4px;
-    position: relative;
-    right: 30px;
+	font-size: 18px;
+	background-color: #ff5a5f;
+	color: #ffffff;
+	height: 48px;
+	width: 20%;
+	border-style: none;
+	border-radius: 4px;
+	position: absolute;
+	right: 30px;
 }
 
 .filters button:hover {
-    opacity: 90%;
+	opacity: 90%;
 }
