--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,55 +1,95 @@
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px #DDDDDD solid;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	border: 1px #dddddd solid;
+	border-radius: 4px;
+	display: flex;
+	align-items: center;
+	position: relative;
 }
 
-.locations, .amenities {
-    height: 100%;
-    width: 25%;
-    border-right: #DDDDDD 1px solid;
+.filters .locations,
+.filters .amenities {
+	height: 100%;
+	width: 25%;
+	border-right: #dddddd 1px solid;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	position: relative;
+	top: 0;
 }
 
-.locations, .amenities h3 {
-    font-weight: 600;
+.locations h3,
+.amenities h3 {
+	font-weight: 600;
+	margin: 0;
+	padding-left: 20%;
 }
 
-.locations, .amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
+.locations h4,
+.amenities h4 {
+	font-weight: 400;
+	font-size: 14px;
+	margin: 0;
+	padding-left: 20%;
 }
 
-.locations:hover > .popover, .amenities:hover > .popover {
-    display: block;
+.locations:hover > .popover,
+.amenities:hover > .popover {
+	display: flex;
+	flex-direction: column;
 }
 
 .filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-style: none;
-    border-radius: 4px;
-    margin-right: 30px;
-    position: relative;
-    right: 30px;
+	font-size: 18px;
+	background-color: #ff5a5f;
+	color: #ffffff;
+	height: 48px;
+	width: 20%;
+	border-style: none;
+	border-radius: 4px;
+	position: absolute;
+	right: 30px;
 }
 
 .filters button:hover {
-    opacity: 90%;
+	opacity: 90%;
 }
 
 .popover {
-    display: none;
-    border: #DDDDDD 1px;
-    border-radius: 4px;
+	display: none;
+	border: #dddddd 1px solid;
+	border-radius: 4px;
+	position: absolute;
+	top: 100%;
+	width: 100%;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	background-color: #ffffff;
+	z-index: 50;
+}
+
+.popover ul {
+	list-style: none;
+}
+
+.popover li {
+	margin: 5px 0;
+}
+
+.popover > li {
+	padding-left: 20%;
+	margin: 7px 0;
 }
 
 .popover h2 {
-    font-size: 16px;
+	font-size: 16px;
+	margin: 0;
+}
+
+.cities {
+	padding-left: 10%;
 }
