--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,19 +1,30 @@
 .places h1 {
-    position: relative;
-    top: 0;
-    left: 0;
-    font-size: 30px;
+	position: relative;
+	top: 0;
+	left: 0;
+	font-size: 30px;
+	width: 100%;
+}
+
+.articles {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
 }
 
 .places article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: #FF5A5F 1px solid;
-    border-radius: 4px;
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: #ff5a5f 1px solid;
+	border-radius: 4px;
+	display: flex;
+	flex-direction: column;
 }
 
-.places article h2 {
-    font-size: 30px;
-    text-align: center;
+.places article > h2 {
+	font-size: 30px;
+	text-align: center;
+	margin: 20px;
 }
